--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <title>Night</title>
     <meta name="google" content="notranslate" />
     <link rel="shortcut icon" href="assets/favicon.webp" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" type="module"></script>
   </head>
   <body>
-    <section class="container">
-      <img class="forest" src="assets/forest.webp" alt="forest">
-    </section>
+    <script type="module" src="/src/App.jsx"></script>
   </body>
 </html>
